# ChangeLog for x11-themes/gtk-engines-qtcurve
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.33 2008/07/01 02:14:58 jer Exp $

  01 Jul 2008; Jeroen Roovers <jer@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable for HPPA (bug #228249).

  28 Jun 2008; Tobias Klausmann <klausman@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on alpha, bug #228249

  22 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  stable x86, bug 228249

  21 Jun 2008; Markus Rothe <corsair@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on ppc64; bug #228249

  20 Jun 2008; <welp@gentoo.org> gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on amd64; Bug 228249

  06 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  add ~sparc keyword, bug 218436

*gtk-engines-qtcurve-0.59.4 (04 Jun 2008)

  04 Jun 2008; Ben de Groot <yngwin@gentoo.org>
  +gtk-engines-qtcurve-0.59.4.ebuild:
  Version bump.

*gtk-engines-qtcurve-0.59.3 (14 May 2008)

  14 May 2008; Ben de Groot <yngwin@gentoo.org>
  -gtk-engines-qtcurve-0.58.0.ebuild, -gtk-engines-qtcurve-0.59.0.ebuild,
  -gtk-engines-qtcurve-0.59.1.ebuild, +gtk-engines-qtcurve-0.59.3.ebuild:
  Version bump

  12 May 2008; Markus Meier <maekke@gentoo.org>
  gtk-engines-qtcurve-0.57.1.ebuild:
  amd64 stable, bug #218435

*gtk-engines-qtcurve-0.59.2 (04 May 2008)

  04 May 2008; Ben de Groot <yngwin@gentoo.org>
  gtk-engines-qtcurve-0.59.0.ebuild, gtk-engines-qtcurve-0.59.1.ebuild,
  +gtk-engines-qtcurve-0.59.2.ebuild:
  Version bump.

  30 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
  gtk-engines-qtcurve-0.58.0.ebuild:
  Keyworded on alpha, bug #218436

  26 Apr 2008; Dawid Węgliński <cla@gentoo.org>
  gtk-engines-qtcurve-0.57.1.ebuild:
  Stable on x86 (bug #218435)

*gtk-engines-qtcurve-0.59.1 (26 Apr 2008)

  26 Apr 2008; Ben de Groot <yngwin@gentoo.org>