@@ -3,9 +3,11 @@ DIST QtCurve-Gtk2-0.57.1.tar.bz2 86786 RMD160 e5575823dac5109650ff0140eff1a40286
 DIST QtCurve-Gtk2-0.59.2.tar.bz2 92955 RMD160 d8ee2bcfcc4091452dd8e46783204d756e574afb SHA1 9549c90d0f56caf285c043d6161a6bdd735690a2 SHA256 d006943114ea51c7f844cec110692b30c9012705e8c81baf4467c14943f9c541
 DIST QtCurve-Gtk2-0.59.3.tar.bz2 93169 RMD160 804b013e841f18c4d8d773a728cbf2da2b894614 SHA1 73540550370a4762be316f5ca78a28f553324023 SHA256 f5977114434fa33ea9e7317ff1fb21e4c51bfa55ebcb0a02ff8644866831cc44
 DIST QtCurve-Gtk2-0.59.4.tar.bz2 93201 RMD160 47790a11c3664c40ee08bb0b152b75f51b469a73 SHA1 accb99b45c2403b4176856fdb9dc7f64cd05eab5 SHA256 688c34efc490781877335337446a0446ec14365e545fcb98c04d7a7e015c889c
+DIST QtCurve-Gtk2-0.59.5.tar.bz2 94200 RMD160 9233ae16634a01a73394bfb65f5d9ab46e457f2e SHA1 64a8adf4318d04704d60ab7f0559b9086caa1410 SHA256 81ef3b2eabd3055638e94dcf0e1b3783889f5e540bc134e1516c261df8cff67b
 EBUILD gtk-engines-qtcurve-0.57.1.ebuild 891 RMD160 1e791545140c8226995f7448514d1cbd551473fe SHA1 bca3a62a3a1867b5a7ab1d7fb91c2adcaeb6265e SHA256 ff3db44a1c31515a9c25153628b1f900f26da69d809df01c5b4fb165b549b690
 EBUILD gtk-engines-qtcurve-0.59.2.ebuild 913 RMD160 6235c6d1eb0fdfc96622d81f5d2f081bb1f504ea SHA1 34136184d75b013f009e9a7b6bba7a9635798ced SHA256 11fb595f482b253bf1763751aa15b0343abd5580d660871478373cb942899c71
 EBUILD gtk-engines-qtcurve-0.59.3.ebuild 913 RMD160 2057a358bfc7df1e06c6b27d771bd6f904eeeed9 SHA1 405aa43d18a2f29721ae29d4f9a5eca79768beb0 SHA256 d69c7864253d29911e1fb1ec4b939296157401bd0f968b9b7a4fe994c2e915a6
 EBUILD gtk-engines-qtcurve-0.59.4.ebuild 912 RMD160 820d2abc1db8234318be333a9b6c0db88960a23e SHA1 5148a43241ece6eb82a9de043f725c0289c47c72 SHA256 dc58e35eee1fb78a9773e1fad8d8391b724d7bda988ff652a85582115c903442
-MISC ChangeLog 5843 RMD160 bdaf0c7b6fcc0784751fea2e4764bd65f5123157 SHA1 203091bce2a7268874a6dcc2f3aa5a6d157583ca SHA256 fd90c70267b6c03626646b678c2f08fb934be037ca62f0d4cfd65f4a565b402b
+EBUILD gtk-engines-qtcurve-0.59.5.ebuild 920 RMD160 dffe301e6a9dd769ab33f1b49c944d171e944885 SHA1 1d3c3ee0335f4384b798fba01478d97aa30af846 SHA256 93f2846b77eef764e70b58eb5faf6b045746de73e2fddc09bcd540ae6f444bcd
+MISC ChangeLog 5992 RMD160 5a7167df60a12dc79c10b5d901a658ce4c8669c7 SHA1 09172214affbff318aeda0a62900528b58a49f91 SHA256 a108e79de47f6d5b60fd2224ec24c16d6e069e3da21777a974c23cc5538b2855
 MISC metadata.xml 258 RMD160 b88c8ff982ed8c04828ce3073cc9818e5fc9cbd3 SHA1 e450b9221477ece8b7e7673831e267f4469023ff SHA256 4e391eaa1ae5034e90d207c6eeff2894646226c878256378a48702bf038bcdea
