@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-qtcurve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.33 2008/07/01 02:14:58 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.34 2008/07/01 18:36:23 yngwin Exp $
+
+*gtk-engines-qtcurve-0.59.5 (01 Jul 2008)
+
+  01 Jul 2008; Ben de Groot <yngwin@gentoo.org>
+  +gtk-engines-qtcurve-0.59.5.ebuild:
+  Version bump.
 
   01 Jul 2008; Jeroen Roovers <jer@gentoo.org>
   gtk-engines-qtcurve-0.59.4.ebuild:
